bypass close validation

--- a/force-app/main/default/classes/ASF_CaseTriggerModularHelper.cls
+++ b/force-app/main/default/classes/ASF_CaseTriggerModularHelper.cls
@@ -60,7 +60,6 @@ public without sharing class ASF_CaseTriggerModularHelper {
                    }
                    caseRec.Feature_Skipper_Flag__c = '';
                }
-            system.debug('set skipperFlagMap--'+skipperFlagMap);
         }
     }
     /****************************************************************************************************************
@@ -1304,7 +1303,7 @@ blankSourcePresent = true;
                 return;
             }
             
-            if (objNewCase.IsClosed == true && objNewCase.OnCreateCloseSR__c == false){
+            if (objNewCase.IsClosed == true && objNewCase.OnCreateCloseSR__c == false && UserInfo.getName() != System.Label.ABCL_Integration_UserName){
                 if(String.isNotBlank(objNewCase.Bulk_Action__c)){
                     objNewCase.addError('FIELD_CUSTOM_VALIDATION_EXCEPTION '+ System.label.Case_Closed_Validation_Message);
                 }
