--- a/force-app/main/default/classes/ASF_CaseTriggerModularHelper.cls
+++ b/force-app/main/default/classes/ASF_CaseTriggerModularHelper.cls
@@ -27,10 +27,10 @@ public without sharing class ASF_CaseTriggerModularHelper {
     }
     public static String relObjName = '';
     /**
-* @Function - setSkipperFlags
-* @Description - method to be invoked at the beginning and end of the BEFORE triggers
-* This will set the flags set to skip per case, respective methods can just check whether their skipper flag is present in the map or not.
-*/
+    * @Function - setSkipperFlags
+    * @Description - method to be invoked at the beginning and end of the BEFORE triggers
+    * This will set the flags set to skip per case, respective methods can just check whether their skipper flag is present in the map or not.
+    */
     public static void setSkipperFlags(List<Case> newList, Map<Id, Case> oldMap) {
         skipperFlagMap = new Map<Id, Set<String>>();
         Boolean isInsert = oldMap == null ? true : false;
@@ -271,14 +271,14 @@ blankSourcePresent = true;
                 } 
                 relObjectList.add(relRec);
                 sObjectIdToCaseMap.put((String)relRec.get('Id'), caseRec);
-                Database.SaveResult[] saveResults = Database.update(relObjectList, false); 
-                //Check each SaveResult for errors and add errors to corresponding records
-                for (Integer i = 0; i < saveResults.size(); i++) {
-                    if (!saveResults.get(i).isSuccess()) {
-                        Case failedRec = sObjectIdToCaseMap.get((String)relObjectList[i].get('Id'));
-                        failedRec.addError('Error on insert: ' + saveResults.get(i).getErrors()[0].getMessage());
-                    }           
-                }
+            }
+            Database.SaveResult[] saveResults = Database.update(relObjectList, false); 
+            //Check each SaveResult for errors and add errors to corresponding records
+            for (Integer i = 0; i < saveResults.size(); i++) {
+                if (!saveResults.get(i).isSuccess()) {
+                    Case failedRec = sObjectIdToCaseMap.get((String)relObjectList[i].get('Id'));
+                    failedRec.addError('Error on update: ' + saveResults.get(i).getErrors()[0].getMessage());
+                }           
             } 
         }
     }
