--- a/force-app/main/default/classes/ABCL_IntegrationCallout.cls
+++ b/force-app/main/default/classes/ABCL_IntegrationCallout.cls
@@ -6,7 +6,9 @@
 *Description  :  Outbound Callout Logger
 *********************************************************/
 public with sharing class ABCL_IntegrationCallout {
-    public static string caseId;
+    public static string caseId; 
+    public static string accountId;
+
     /****************************************************************************************************************
     * @LOB - ABHFL
     * @Function - executeCallout
@@ -22,24 +24,18 @@ public with sharing class ABCL_IntegrationCallout {
         HttpResponse response = new HttpResponse();
         IntegrationResponseWrapper integrationResponse = new IntegrationResponseWrapper();
         Boolean hasError = false;
-        
         //Fetch Integration Metadata Record
         ABCL_Integrations__mdt  integrationMdt = getIntegrationMetadata(integrationName);
         
         //Build Endpoint URL using provided parameters
         string endPointURL = integrationMdt.EndPoint__c;
         if(urlParameters != null){
-            buildURLParameters(urlParameters,integrationMdt.EndPoint__c);                                                  
+           endPointURL= buildURLParameters(urlParameters,integrationMdt.EndPoint__c);                                                  
         }                                              
         
         //Build HttpRequest
         request.setMethod(integrationMdt.Protocol__c);
         request.setEndPoint(endPointURL);
-        
-        if(integrationMdt.Timeout__c != null){
-            request.setTimeout(Integer.valueof(integrationMdt.Timeout__c));
-        }
-
         //Check for Payload
         if(!String.isBlank(payload)){
             request.setBody(payload);
@@ -124,6 +120,9 @@ public with sharing class ABCL_IntegrationCallout {
             if(String.isNotBlank(caseId)){
                 integrationLog.Case__c = caseId;
             }
+            if(String.isNotBlank(accountId)){
+                integrationLog.Account__c  = accountId;
+            }
             if(String.isnotBlank(integrationResponse.requestBody)){
                 integrationLog.Request__c = integrationResponse.requestBody;
             }
@@ -172,8 +171,8 @@ public with sharing class ABCL_IntegrationCallout {
     }
     
     public class IntegrationResponseWrapper{
-        public string responseBody;
-        public integer statusCode;
-        public string requestBody;
+        @AuraEnabled public string responseBody;
+        @AuraEnabled public integer statusCode;
+        @AuraEnabled public string requestBody;
     }
 }
