--- a/force-app/main/default/classes/ABHFL_AmortizationIntegration.cls
+++ b/force-app/main/default/classes/ABHFL_AmortizationIntegration.cls
@@ -386,14 +386,14 @@ public with sharing class ABHFL_AmortizationIntegration implements ASF_Integrati
     public class AmmortRequestWrapper{
         public string lan;
         public string caseId;
-        public string souce;
+        public string source;
         public string requestType;
         public string reportName;
         public string documentType;
         
         AmmortRequestWrapper(string lanNo,Case caseRec){
             this.lan = lanNo;
-            this.souce = ABHFL_Constants.CRM;
+            this.source = ABHFL_Constants.CRM;
             this.requestType = ABHFL_Constants.EMAIL;
             this.lan = lanNo;
             this.reportName = 'RepaymentSchedule';
