--- a/force-app/main/default/classes/ASF_CaseQueryHandler.cls
+++ b/force-app/main/default/classes/ASF_CaseQueryHandler.cls
@@ -34,7 +34,7 @@ public without sharing class ASF_CaseQueryHandler {
             cases = [SELECT Id,BusinessHoursId,Status,OwnerId,CCC_External_Id__c,Stage__c,pending_clarification__c,CreatedById,
                      Previous_Stage__c,ClosedDate, PAY_Payment_Detail__c, SLA_Target_1__c, CSAT__c, DB_Hours__c,
                      has_CheckLists__c, Has_Open_Tasks__c,ABFL_Case_Detail__c,ABFL_Case_Detail__r.ABCOwner__c,Technical_Source__c,
-                     ABFL_Case_Detail__r.Resolution_Comments__c, Source__c,Nature__c,Description,
+                     ABFL_Case_Detail__r.Resolution_Comments__c, Source__c,Nature__c,Description,Feature_Skipper_Flag__c,
                      (Select Id, Checklist_External_Id__c, Status__c, Case__c from Checklists__r),
                      (Select Id, Work_Item_External_ID__c, WhatId from Tasks)
                      FROM Case
@@ -77,6 +77,7 @@ public without sharing class ASF_CaseQueryHandler {
                                 FROM ASF_Case_Approv__c
                                 WHERE SR__c = :caseIds
                                 AND Case_Stage_At_Creation__c = :caseStages
+                                AND Is_Recategorization_Request__c = false
                                 ORDER BY CreatedDate desc];
         }
         return caseApprovals;
@@ -204,7 +205,8 @@ public without sharing class ASF_CaseQueryHandler {
                     FROM Work_Items__r
                 ),
                 (
-                    SELECT Id, Name, Type__c, Mandatory__c,Description__c, Checklist_External_Id__c
+                    // VIRENDRA - 13 June 2024 - ADDED Picklist_Options__c in SOQL.
+                    SELECT Id, Label__c, Name, Type__c, Mandatory__c,Description__c, Checklist_External_Id__c, Picklist_Options__c 
                     FROM Case_Checklist_Masters__r
                 ),
                 Step_1_Approver_1__c,
@@ -329,6 +331,7 @@ public without sharing class ASF_CaseQueryHandler {
     **/
     public static List<Case> getCaseRecordWithQueryFields(Set<String> queryFields, Set<Id> caseIdList) {
         if(casesWithConfigQueryFields == null || refreshRecords){
+            system.debug('queryFields--'+String.join(queryFields, ','));
             casesWithConfigQueryFields = (List<Case>) Database.query(
                 'SELECT ' +
                 String.join(queryFields, ',') +
