--- a/force-app/main/default/classes/ABHFL_NDCSTPHandler.cls
+++ b/force-app/main/default/classes/ABHFL_NDCSTPHandler.cls
@@ -362,7 +362,7 @@ public with sharing class ABHFL_NDCSTPHandler implements ASF_IntegrationInvocabl
     
     public class NDCRequestWrapper{
         public string caseId;
-        public string souce;
+        public string source;
         public string requestType;
         public string lan;
         public string reportName;
@@ -370,7 +370,7 @@ public with sharing class ABHFL_NDCSTPHandler implements ASF_IntegrationInvocabl
         
         public NDCRequestWrapper(string caseNumber,string lanNo){
             this.caseId = caseNumber;
-            this.souce = ABHFL_Constants.CRM;
+            this.source = ABHFL_Constants.CRM;
             this.requestType = ABHFL_Constants.EMAIL;
             this.lan = lanNo;
             this.reportName = ABHFL_Constants.NDC_REPORT;
