--- a/force-app/main/default/classes/ABHFL_WelcomeKitIntegration.cls
+++ b/force-app/main/default/classes/ABHFL_WelcomeKitIntegration.cls
@@ -433,7 +433,7 @@ public with sharing class ABHFL_WelcomeKitIntegration implements ASF_Integration
     *********************************************************/
     public class WelcomeKitRequestWrapper{
         public string caseId;
-        public string souce;
+        public string source;
         public string requestType;
         public string lan;
         public string reportName;
@@ -441,7 +441,7 @@ public with sharing class ABHFL_WelcomeKitIntegration implements ASF_Integration
 
         public WelcomeKitRequestWrapper(string caseNumber,string lanNo){
             this.caseId = caseNumber;
-            this.souce = ABHFL_Constants.CRM;
+            this.source = ABHFL_Constants.CRM;
             this.requestType = ABHFL_Constants.EMAIL;
             this.lan = lanNo;
             this.reportName = ABHFL_Constants.WELCOME_KIT;
