--- a/force-app/main/default/classes/ABCL_IntegrationCommonUtility.cls
+++ b/force-app/main/default/classes/ABCL_IntegrationCommonUtility.cls
@@ -7,7 +7,7 @@
 *********************************************************/
 @SuppressWarnings('PMD.CognitiveComplexity,PMD.CyclomaticComplexity,PMD.ExcessiveParameterList,PMD.NcssMethodCount,PMD.StdCyclomaticComplexity,PMD.AvoidDeeplyNestedIfStmts')
 public with sharing class ABCL_IntegrationCommonUtility {
-    public static final List<String> DMS_LINE_OF_BUSINESS = new List<String>{'ABHFL','ABFL','ABWM'};
+    public static final List<String> DMS_LINE_OF_BUSINESS = new List<String>{'ABHFL','ABFL','ABWM','ABSLI'};
     /****************************************************************************************************************
     * @LOB - Common
     * @Function - fetchStpTemplates
@@ -96,7 +96,7 @@ public with sharing class ABCL_IntegrationCommonUtility {
         Set<Id> setOfCaseIds = new Set<Id>();
 
         for(Case caseRec : caseRecs){
-            setOfCaseIds.add(caseRec.Id); 
+            setOfCaseIds.add(caseRec.Id);
         }
         List<Case> csList = [Select id,Business_Unit__c,Lead__c,AccountId, CCC_External_Id__c, contactId, No_Auto_Communication__c FROM Case WHERE Id in :setOfCaseIds WITH SYSTEM_MODE];
 
@@ -235,7 +235,7 @@ public with sharing class ABCL_IntegrationCommonUtility {
         Set<String> recepientIds = new Set<String>();
         recepientIds.add(caseRec.CreatedById);
         Case caseRecord = [SELECT Id,Owner.Name,CaseNumber,CreatedById from Case WHERE Id =: caseRec.Id WITH SYSTEM_MODE];
-        CustomNotificationType templateInfo = [SELECT Id, DeveloperName, MasterLabel FROM CustomNotificationType 
+        CustomNotificationType templateInfo = [SELECT Id, DeveloperName, MasterLabel FROM CustomNotificationType
                                                             WHERE DeveloperName = 'Case_Assignment_Change' WITH SYSTEM_MODE Limit 1];
         if(Title == Null){
             Title = templateInfo.MasterLabel;
@@ -267,15 +267,15 @@ public with sharing class ABCL_IntegrationCommonUtility {
                 if(response != null && response.returnCode != null && response.returnMessage != null && caseInt.Error_Message__c == null && response.returnCode != '1' ){
                     if(response.returnCode != '1' &&  Schema.sObjectType.ASF_Case_Integration__c.isUpdateable()){
                         caseInt.Error_Message__c = response.returnMessage;
-                        update caseInt; 
+                        update caseInt;
                     }
-                } 
+                }
             }else {
                 stpResponseWrapper response = (stpResponseWrapper)JSON.deserialize(caseIntegration.Response__c,stpResponseWrapper.class);
                 if(response != null && response.operationStatus != null && response.operationMessage != null && caseInt.Error_Message__c == null && response.operationStatus != '1' ){
                     if(response.operationStatus == '0' &&  Schema.sObjectType.ASF_Case_Integration__c.isUpdateable()){
                         caseInt.Error_Message__c = response.operationMessage;
-                        update caseInt; 
+                        update caseInt;
                     }
                 }
             }
@@ -294,8 +294,26 @@ public with sharing class ABCL_IntegrationCommonUtility {
     @InvocableMethod
     public static void transferFilesToDMS(List<Id> recIds){
         if(recIds.size() == 1){
-            Case caseRecord = [Select id,Business_Unit__c,CaseNumber,Account.Client_Code__c,Type_Text__c,Sub_Type_Text__c,Nature__c,Lead__c,CreatedDate,Asset.LAN__c,Asset.Lead_Id__c,
+            Case caseRecord = [Select id,Business_Unit__c,CaseNumber,Account.Client_Code__c,Type_Text__c,Sub_Type_Text__c,Nature__c,Lead__c,CreatedDate,Asset.LAN__c,Asset.Lead_Id__c, Asset.Application_Number__c, Asset.Policy_No__c, LAN__c, CCC_External_Id__c,
                             Account.Phone,Account.PersonMobilePhone,Account.RecordType.Name  from Case where Id =: recIds[0] and Business_Unit__c in: DMS_LINE_OF_BUSINESS WITH SYSTEM_MODE];
+            // Custom Logic handling for ABSLI Business Unit
+            String dmsFolderId = '', businessFileName = '', policyNumber = '', applicationId = '';
+            Boolean isABSLIBusiness = false;
+            if (caseRecord.Business_Unit__c == ABSLI_Constants.BUSINESS_UNIT) {
+                isABSLIBusiness = true;
+                policyNumber = caseRecord.Asset.Policy_No__c != '' ? caseRecord.Asset.Policy_No__c : caseRecord.LAN__c;
+                List<ASF_Case_Category_Config__c> cccRecord = [
+                    SELECT Id, CCC_External_Id__c, DMS_Folder_Id__c
+                    FROM ASF_Case_Category_Config__c
+                    WHERE CCC_External_Id__c = :caseRecord.CCC_External_Id__c
+                    WITH SECURITY_ENFORCED
+                ];
+                dmsFolderId = cccRecord[0].DMS_Folder_Id__c;
+                applicationId = caseRecord.Asset.Application_Number__c;
+                businessFileName =
+                    applicationId +'_' +policyNumber +'_' +dmsFolderId +'_' +
+                    Datetime.now().format('ddMMyyyy');
+            }
             List<ContentDocumentLink> contentDocumentList = [Select ContentDocumentId from ContentDocumentLink where LinkedEntityId =: caseRecord.Id WITH SYSTEM_MODE];
             if(contentDocumentList.size() > 0){
                 Set<Id> contentDocumentIds = new Set<Id>();
@@ -325,7 +343,6 @@ public with sharing class ABCL_IntegrationCommonUtility {
                     fileRec.ContentDocumentId__c = fileVersion.ContentDocumentId;
                     fileRec.Case__c = caseRecord.Id;
                     fileRec.ContentVersionId__c = fileVersion.Id;
-                    fileRec.File_Name__c = fileVersion.Title;
                     fileRec.Has_Multiple_Versions__c = versionCount > 1 ? true : false;
                     fileRec.Is_Latest_Version__c = versionCount == Integer.valueof(fileVersion.VersionNumber) ? true : false;
                     fileRec.Version_Number__c = fileVersion.VersionNumber;
@@ -334,16 +351,21 @@ public with sharing class ABCL_IntegrationCommonUtility {
                     fileRec.DMS_External_ID__c = fileVersion.Id + '' + currentDateTime.getTime();
                     fileRec.File_Extension__c = fileVersion.FileExtension;
                     fileRec.Next_Retry__c = System.now().addMinutes(15);
-                    if(String.isBlank(leadId)){
+                    if(String.isBlank(leadId) && !isABSLIBusiness){
                         fileRec.Status__c = ABHFL_Constants.CANCELED;
                         fileRec.Error_Description__c = ABHFL_Constants.ERROR_DESC_FOR_CANCELLED_DMS;
                     } else {
                         fileRec.Status__c = ABHFL_Constants.PENDING;
                     }
+                    // Modified Attribute for ABSLI specific Business Unit
+                    fileRec.File_Name__c = isABSLIBusiness ? businessFileName : fileVersion.Title;
+                    fileRec.DMS_Folder_Id__c = isABSLIBusiness ? dmsFolderId : '';
+                    fileRec.Application_ID__c = isABSLIBusiness ? applicationId : caseRecord.Asset.LAN__c;
+                    fileRec.Policy_No__c = isABSLIBusiness ? policyNumber : '';
                     fileRecList.add(fileRec);
                 }
                 if(fileRecList.size() > 0 && Schema.sObjectType.DMS_Files__c.isCreateable()){
-                    insert fileRecList; 
+                    insert fileRecList;
                     Set<Id> dmsFileIds = new Set<Id>();
                     for(DMS_Files__c file : fileRecList){
                         dmsFileIds.add(file.Id);
@@ -367,7 +389,9 @@ public with sharing class ABCL_IntegrationCommonUtility {
                                 File_Name__c = file.File_Name__c,
                                 Is_Latest_Version__c = file.Is_Latest_Version__c,
                                 Version_Number__c = file.Version_Number__c,
-                                Application_ID__c = caseRecord.Asset.LAN__c,
+                                Application_ID__c = file.Application_ID__c,
+                                DMS_Folder_Id__c = file.DMS_Folder_Id__c,
+                                Policy_No__c = file.Policy_No__c,
                                 Document_Type__c = caseRecord.Type_Text__c+'-'+caserecord.Sub_Type_Text__c+'-'+caseRecord.Nature__c,
                                 File_Extension__c = file.File_Extension__c,
                                 Doc_SubType__c = caseRecord.Sub_Type_Text__c,
@@ -397,10 +421,27 @@ public with sharing class ABCL_IntegrationCommonUtility {
     public static void transferToDMSBulk(List<Id> recIds){
         Map<Id,Case> caseRecordMap = new Map<Id,Case>([Select id,Business_Unit__c,CaseNumber,Account.Client_Code__c,
                                     Type_Text__c,Sub_Type_Text__c,Nature__c,Lead__c,CreatedDate,Asset.LAN__c,
-                                    Asset.Lead_Id__c,Account.Phone,Account.PersonMobilePhone,Account.RecordType.Name  
+                                    Asset.Lead_Id__c,Asset.Application_Number__c, Asset.Policy_No__c, LAN__c, CCC_External_Id__c,Account.Phone,Account.PersonMobilePhone,Account.RecordType.Name
                                     from Case where Id =: recIds and Business_Unit__c in: DMS_LINE_OF_BUSINESS]);
 
-        List<ContentDocumentLink> contentDocumentList = [Select ContentDocumentId,LinkedEntityId from ContentDocumentLink 
+        // Custom Logic handling for ABSLI Business Unit
+        Map<String,ASF_Case_Category_Config__c> cccRecord = new Map<String,ASF_Case_Category_Config__c>();
+        Set<String> cccExternalIds = new Set<String>();
+        for(Case cs : caseRecordMap.values()){
+            if(cs.Business_Unit__c == ABSLI_Constants.BUSINESS_UNIT){
+                cccExternalIds.add(cs.CCC_External_Id__c);
+            }
+        }
+        for (ASF_Case_Category_Config__c ccc : [
+            SELECT Id, CCC_External_Id__c, DMS_Folder_Id__c
+            FROM ASF_Case_Category_Config__c
+            WHERE CCC_External_Id__c IN :cccExternalIds
+            WITH SECURITY_ENFORCED
+        ]) {
+            cccRecord.put(ccc.CCC_External_Id__c, ccc);
+        }
+
+        List<ContentDocumentLink> contentDocumentList = [Select ContentDocumentId,LinkedEntityId from ContentDocumentLink
                                                          where LinkedEntityId in: caseRecordMap.keySet()  WITH SYSTEM_MODE];
         if(contentDocumentList.size() > 0){
 
@@ -409,7 +450,7 @@ public with sharing class ABCL_IntegrationCommonUtility {
                 contentDocumentCaseMap.put(docLink.ContentDocumentId,caseRecordMap.get(docLink.LinkedEntityId));
             }
 
-            List<ContentVersion> contentVersionList = [ Select id,Title,ContentDocumentId,VersionNumber,FileExtension 
+            List<ContentVersion> contentVersionList = [ Select id,Title,ContentDocumentId,VersionNumber,FileExtension
                                                         from ContentVersion where ContentDocumentId in: contentDocumentCaseMap.keySet()  WITH SYSTEM_MODE ];
 
             Map<String,Integer> contentDocumentVersionMap = new Map<String,Integer>();
@@ -427,6 +468,20 @@ public with sharing class ABCL_IntegrationCommonUtility {
 
                 DMS_Files__c fileRec = new DMS_Files__c();
                 Case relatedCase = contentDocumentCaseMap.get(fileVersion.ContentDocumentId);
+
+                // Custom Logic handling for ABSLI Business Unit
+                String dmsFolderId = '', businessFileName = '', policyNumber = '', applicationId = '';
+                Boolean isABSLIBusiness = false;
+                if (relatedCase.Business_Unit__c == ABSLI_Constants.BUSINESS_UNIT) {
+                    isABSLIBusiness = true;
+                    policyNumber = relatedCase.Asset.Policy_No__c != '' ? relatedCase.Asset.Policy_No__c : relatedCase.LAN__c;
+                    dmsFolderId = cccRecord.get(relatedCase.CCC_External_Id__c).DMS_Folder_Id__c;
+                    applicationId = relatedCase.Asset.Application_Number__c;
+                    businessFileName =
+                        applicationId +'_' +policyNumber +'_' +dmsFolderId +'_' +
+                        Datetime.now().format('ddMMyyyy');
+                }
+
                 string leadId = '';
                 if(relatedCase.Asset.Lead_Id__c != null){
                     leadId = relatedCase.Asset.Lead_Id__c;
@@ -438,7 +493,6 @@ public with sharing class ABCL_IntegrationCommonUtility {
                 fileRec.ContentDocumentId__c = fileVersion.ContentDocumentId;
                 fileRec.Case__c = relatedCase.Id;
                 fileRec.ContentVersionId__c = fileVersion.Id;
-                fileRec.File_Name__c = fileVersion.Title;
                 fileRec.Has_Multiple_Versions__c = versionCount > 1 ? true : false;
                 fileRec.Is_Latest_Version__c = versionCount == Integer.valueof(fileVersion.VersionNumber) ? true : false;
                 fileRec.Version_Number__c = fileVersion.VersionNumber;
@@ -447,18 +501,23 @@ public with sharing class ABCL_IntegrationCommonUtility {
                 fileRec.DMS_External_ID__c = fileVersion.Id + '' + currentDateTime.getTime();
                 fileRec.File_Extension__c = fileVersion.FileExtension;
                 fileRec.Next_Retry__c = System.now().addMinutes(15);
-                if(String.isBlank(leadId)){
+                if(String.isBlank(leadId) && !isABSLIBusiness){
                     fileRec.Status__c = ABHFL_Constants.CANCELED;
                     fileRec.Error_Description__c = ABHFL_Constants.ERROR_DESC_FOR_CANCELLED_DMS;
                 } else {
                     fileRec.Status__c = ABHFL_Constants.PENDING;
                 }
+                // Modified Attribute for ABSLI specific Business Unit
+                fileRec.File_Name__c = isABSLIBusiness ? businessFileName : fileVersion.Title;
+                fileRec.DMS_Folder_Id__c = isABSLIBusiness ? dmsFolderId : '';
+                fileRec.Application_ID__c = isABSLIBusiness ? applicationId : relatedCase.Asset.LAN__c;
+                fileRec.Policy_No__c = isABSLIBusiness ? policyNumber : '';
                 fileRecList.add(fileRec);
             }
 
             if(fileRecList.size() > 0 && Schema.sObjectType.DMS_Files__c.isCreateable()){
-                insert fileRecList; 
-                
+                insert fileRecList;
+
                 List<DMS_File_Transfer__e> dmsEventList = new List<DMS_File_Transfer__e>();
                 for(DMS_Files__c file : fileRecList){
                     if(file.Status__c == ABHFL_Constants.PENDING){
@@ -485,7 +544,9 @@ public with sharing class ABCL_IntegrationCommonUtility {
                             File_Name__c = file.File_Name__c,
                             Is_Latest_Version__c = file.Is_Latest_Version__c,
                             Version_Number__c = file.Version_Number__c,
-                            Application_ID__c = relatedCase.Asset.LAN__c,
+                            Application_ID__c = file.Application_ID__c,
+                            DMS_Folder_Id__c = file.DMS_Folder_Id__c,
+                            Policy_No__c = file.Policy_No__c,
                             Document_Type__c = relatedCase.Type_Text__c+'-'+relatedCase.Sub_Type_Text__c+'-'+relatedCase.Nature__c,
                             File_Extension__c = file.File_Extension__c,
                             Doc_SubType__c = relatedCase.Sub_Type_Text__c,
